# HiveSwarm

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  _demo_run.py  dashboard.html  dashboard_dump.py  dashboard_live.py  docker-compose.yml  h  live-data.json  p  p.sh  pyproject.toml  tab_screenshots.py
.archive/agents/: ad-pwn.md  binary-exploiter.md  bug-bounty-methodologist.md  cloud-escape.md  confusion-attacker.md  llm-redteamer.md  mobile-reverser.md  supply-chain-hunter.md  waf-bypasser.md  web3-auditor.md  xss-hunter.md
.archive/config/: agent-skill-matrix.json  swarm-presets.json
.archive/dashboards/: dashboard.html  dashboard_server.py
.archive/hive/: hive-agent.py  hive-core.py  hive-dispatcher.py  hive-learn.py  hive-repair.py  hive-sandbox.py
.archive/weapons/: dep-audit.py  deser-probe.py  inject-probe.py
.github/workflows/: test.yml
agents/: api-hunter.md  http-smuggler.md  race-condition.md  report-humanizer.md  sql-injector.md
config/: company-template.toml  default.toml  mvp.toml  production.toml.example  providers.local.toml
core/: __init__.py  agent.py  audit.py  auth.py  billing.py  brain.py  events.py  governance.py  recovery.py  skill.py  skill_bundle.py  telemetry.py  tenant.py
docs/: ARCH.md  AUDIT_2026-06-28.md  CHANGELOG.md  HOW_TO_REPLACE.md  INTERFACES.md  PRICING_AND_ROADMAP.md  PRODUCTION_SETUP.md  RELEASE_NOTES_v0.2.0.md  TOMORROW_PLAN.md  TOMORROW_PLAN_DAY15.md  VISION.md
gateway/: __main__.py  app.py  deps.py  models.py  routes_events.py  routes_health.py  routes_skills.py  routes_tasks.py
gateway/middleware/: __init__.py  auth_bootstrap.py
hive/: hive-agent.py  hive-brain.py  hive-dispatcher.py  hive-learn.py  hive-live.py  hive-mind.py  hive-overseer.py  hive-run.py
layers/: __init__.py
layers/brain/: planner.py
layers/inspect/: checker.py  llm_judge.py  validator.py
layers/memory/: recall.py  store.py
layers/monitor/: bus.py  health.py  logger.py
layers/repair/: fixer.py  re_assembler.py  strategy_table.py
layers/report/: __init__.py  generator.py
layers/work/: factory.py  pool.py  skill_registry.py  transaction.py
sdk/hiveswarm_client/: README.md  client.py  (+1 more)
skills/agentvet_pack/: manifest.toml  pyproject.toml
skills/agentvet_pack/src/agentvet_pack/: __init__.py  skills.py
skills/crawler_pack/: manifest.toml  pyproject.toml
skills/crawler_pack/src/crawler_pack/: __init__.py  skills.py
skills/web_search_pack/: manifest.toml  pyproject.toml
skills/web_search_pack/src/web_search_pack/: __init__.py  skills.py
src/: main.py
stub/: __init__.py  audit_kafka.py  audit_logfile.py  auth_oauth.py  auth_simple.py  billing_noop.py  billing_stripe.py  bus_local.py  config_loader.py  dashboard_gradio.py  governance_permanent.py  llm_litellm.py  llm_providers.py  observability_otel.py  recovery_circuit.py  recovery_retry.py  services.py  store_sqlite.py  telemetry_noop.py  tenant_default.py  tenant_multi.py
tests/: conftest.py
weapons/: api-probe.py  page-recon.py  smuggler-probe.py  ticket-probe.py  universal-probe.py
文档/: FULL_REPORT_2026-06-25.md  architecture-logic-view.md  hiveswarm-tabs-dump.md
(+43 files in other folders)
