[project]
name = "hiveswarm"
version = "0.1.0"
description = "Multi-agent coordination framework with dynamic skill equipping (borrow/return)"
authors = [
    {name = "Sanjiu", email = "sanjiu@hiveswarm.local"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "pydantic>=2.5",
    "litellm>=1.30",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "tomli>=2.0; python_version < '3.11'",
    "httpx>=0.27",  # SDK client
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "gradio>=4.15",     # dashboard
    "sqlite-utils>=3.0",  # memory
]

[project.entry-points."hiveswarm.skills"]
# 技能包通过 entry_points 注册(Phase 1 留空,Phase 4 填)

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
markers = [
    "unit: 纯函数 + mock,无 I/O(< 5s)",
    "integration: 真实 I/O,慢(< 30s)",
    "e2e: 完整流程,慢(< 2min)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line-length 单独管

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.coverage.run]
source = ["core", "layers", "stub", "sdk"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
