[project]
name = "hiveswarm-skill-crawler"
version = "0.2.0"
description = "HiveSwarm skill pack: 通用 HTTP 爬虫 (http_fetch / url_extract / http_post)"
requires-python = ">=3.10"

dependencies = [
    "httpx>=0.27",
    # BeautifulSoup 是可选依赖 — 没装自动回退正则
]

[project.optional-dependencies]
full = ["beautifulsoup4>=4.12"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]