[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hiveswarm-skill-web-search"
version = "0.1.0"
description = "Web search skill for HiveSwarm (DuckDuckGo)"
requires-python = ">=3.11"
dependencies = ["httpx>=0.24"]

[tool.setuptools.packages.find]
where = ["src"]